--- a/res/layout/alarmslist_entry.xml
+++ b/res/layout/alarmslist_entry.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dip" >
+    android:orientation="horizontal"
+    android:padding="10dip"
+    android:weightSum="100" >
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="0px"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_weight="90" >
 
         <TextView
             android:id="@+id/title_entry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="28dip" />
+            android:textSize="28sp" />
 
         <TextView
             android:id="@+id/desc_entry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dip" />
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/radius_entry"
-        android:layout_width="wrap_content"
+        android:layout_width="0px"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:textSize="20dip" />
+        android:textSize="20sp"
+        android:layout_weight="10" />
 
-</RelativeLayout>
+
+</LinearLayout>
