--- a/res/layout/alarm_details.xml
+++ b/res/layout/alarm_details.xml
@@ -13,13 +13,15 @@
         android:layout_marginTop="20dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
+    
     <TextView
         android:id="@+id/descDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         android:text="Medium Text"
+        android:textColor="@android:color/darker_gray"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -35,7 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         android:text="Medium Text"
+        android:textColor="@android:color/darker_gray"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
