--- a/res/layout/alarmslist_entry.xml
+++ b/res/layout/alarmslist_entry.xml
@@ -10,7 +10,7 @@
         android:layout_width="0px"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="90" >
+        android:layout_weight="85" >
 
         <TextView
             android:id="@+id/title_entry"
@@ -32,7 +32,11 @@
         android:layout_width="0px"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_weight="10" />
+        android:layout_weight="15" />
 
-
+	<TextView
+	    android:id="@+id/alarm_uid"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:visibility="gone" />
 </LinearLayout>
