--- a/res/layout/new_alarm.xml
+++ b/res/layout/new_alarm.xml
@@ -40,6 +40,7 @@
         android:id="@+id/locationField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:ems="10" />
 
     <RelativeLayout
@@ -85,6 +86,6 @@
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:text="@string/create" />
 
 </LinearLayout>
