--- a/res/layout/alarmslist_entry.xml
+++ b/res/layout/alarmslist_entry.xml
@@ -16,6 +16,8 @@
             android:id="@+id/title_entry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textSize="28sp" />
 
         <TextView
