fixed UI async bug

--- a/res/layout/alarmslist.xml
+++ b/res/layout/alarmslist.xml
@@ -20,6 +20,6 @@
         android:textSize="35sp"
         android:clickable="true"
         android:onClick="createNewAlarm"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
