--- a/res/layout/alarmslist.xml
+++ b/res/layout/alarmslist.xml
@@ -15,11 +15,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Tap to Add"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="35sp"
         android:clickable="true"
         android:onClick="createNewAlarm"
+        android:text="No Alarms Found\nTap to Add"
+        android:gravity="center"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="35sp"
         android:visibility="visible" />
 
 </RelativeLayout>
