fixed Account Settings Login

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -27,4 +27,7 @@
         <item >180</item>
     </string-array>
     
+    <string-array name="ac_settings">
+        <item>Sync Interval</item>
+    </string-array>
 </resources>
